[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/UpgradeBuyControl.gd" type="Script" id=2]
[ext_resource path="res://resources/kenneyUI.tres" type="Theme" id=3]
[ext_resource path="res://resources/sheet_black1x.png" type="Texture" id=4]
[ext_resource path="res://resources/RetroDesktopTheme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 209.24, 257.171, 32.9807, 36.2071 )

[node name="UpgradeBuyControl" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 220.0
margin_bottom = 76.0
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 210.0
margin_bottom = 70.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 202.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "Autoclicker Speed 1"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 202.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 19.0
margin_right = 202.0
margin_bottom = 103.0
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "the quick brown fox jumps over the lazy dog"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 202.0
margin_bottom = 66.0
custom_constants/separation = 12
alignment = 2

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 142.0
margin_top = 5.0
margin_right = 154.0
margin_bottom = 31.0
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 202.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
icon = SubResource( 2 )
expand_icon = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
